--- a/01_Introduction to Python Programming/Chapter 10 - Sequence Functions.ipynb
+++ b/01_Introduction to Python Programming/Chapter 10 - Sequence Functions.ipynb
@@ -46,9 +46,48 @@
    "execution_count": null,
    "id": "1e27fdd8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "pears\n",
+      "orange\n",
+      "fruits\n",
+      "apples\n",
+      "pears\n",
+      "X is 1\n",
+      "orange\n",
+      "fruits\n",
+      "0 apples\n",
+      "1 pears\n",
+      "2 orange\n",
+      "3 fruits\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "my_list = ['apples','pears','orange','fruits']\n",
+    "\n",
+    "# Way 1\n",
+    "count = 1\n",
+    "for element in my_list:\n",
+    "    print(element)\n",
+    "    if count == 0:\n",
+    "        print(\"Count is 1\")\n",
+    "    count+=1\n",
+    "\n",
+    "#way 2\n",
+    "for x in range(len(my_list)):\n",
+    "    print(my_list[x])\n",
+    "    if x == 1:\n",
+    "        print('X is 1')\n",
+    "\n",
+    "# enumerate is more elegant way to print index and the element, helps you with loops that require a counter by adding an index to each item in an iterable. \n",
+    "for x,element in enumerate(my_list):\n",
+    "    print(x,element)"
    ]
   },
   {
@@ -66,9 +105,38 @@
    "execution_count": null,
    "id": "38b3a6bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Barium', 'Beryllium', 'Calcium', 'Magnesium', 'Radium', 'Strontium']\n",
+      "['Strontium', 'Radium', 'Magnesium', 'Calcium', 'Beryllium', 'Barium']\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "earth_metals = ['Beryllium','Magnesium','Calcium','Strontium','Barium','Radium'] # sorted by atomic number\n",
+    "\n",
+    "# sorting alphabeticly\n",
+    "earth_metals.sort()\n",
+    "print(earth_metals)\n",
+    "\n",
+    "#reverse order\n",
+    "earth_metals.sort(reverse=True)\n",
+    "print(earth_metals)\n",
+    "\n",
+    "#tuple sorting\n",
+    "earth_metals = ('Beryllium','Magnesium','Calcium','Strontium','Barium','Radium')\n",
+    "#earth_metals.sort() # AttributeError : 'tuple object has no attribute 'sort'\n",
+    "#tuples are immutable, they can not be changed\n",
+    "\n",
+    "#list.sort method\n",
+    "# L.sort(key=None, reverse= False)\n",
+    "#reverse = False -> sort in ascending order\n",
+    "#reverse = True -> sort in descending order\n",
+    "\n"
    ]
   },
   {
@@ -222,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
