--- a/01_Introduction to Python Programming/Chapter 10 - Sequence Functions.ipynb
+++ b/01_Introduction to Python Programming/Chapter 10 - Sequence Functions.ipynb
@@ -111,8 +111,35 @@
      "output_type": "stream",
      "text": [
       "['Barium', 'Beryllium', 'Calcium', 'Magnesium', 'Radium', 'Strontium']\n",
-      "['Strontium', 'Radium', 'Magnesium', 'Calcium', 'Beryllium', 'Barium']\n"
+      "['Strontium', 'Radium', 'Magnesium', 'Calcium', 'Beryllium', 'Barium']\n",
+      "Help on method_descriptor:\n",
+      "\n",
+      "sort(self, /, *, key=None, reverse=False) unbound builtins.list method\n",
+      "    Sort the list in ascending order and return None.\n",
+      "\n",
+      "    The sort is in-place (i.e. the list itself is modified) and stable (i.e. the\n",
+      "    order of two equal elements is maintained).\n",
+      "\n",
+      "    If a key function is given, apply it once to each list item and sort them,\n",
+      "    ascending or descending, according to their function values.\n",
+      "\n",
+      "    The reverse flag can be set to sort in descending order.\n",
+      "\n",
+      "[('Jupiter', 71492, 1.33, 5.21), ('Saturn', 60268, 0.69, 9.551), ('Uranus', 25559, 1.27, 19.213), ('Neptune', 24764, 1.64, 30.07), ('Earth', 6378, 5.52, 1.0), ('Venus', 6052, 5.24, 0.723), ('Mars', 3396, 3.93, 1.53), ('Mercury', 2440, 5.43, 0.395)]\n",
+      "[('Saturn', 60268, 0.69, 9.551), ('Uranus', 25559, 1.27, 19.213), ('Jupiter', 71492, 1.33, 5.21), ('Neptune', 24764, 1.64, 30.07), ('Mars', 3396, 3.93, 1.53), ('Venus', 6052, 5.24, 0.723), ('Mercury', 2440, 5.43, 0.395), ('Earth', 6378, 5.52, 1.0)]\n",
+      "['Barium', 'Beryllium', 'Calcium', 'Magnesium', 'Radium', 'Strontium']\n",
+      "['Beryllium', 'Magnesium', 'Calcium', 'Strontium', 'Barium', 'Radium']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'a', 'a', 'b', 'c', 'e', 'h', 'i', 'l', 'l', 'p', 't']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -133,10 +160,44 @@
     "#tuples are immutable, they can not be changed\n",
     "\n",
     "#list.sort method\n",
-    "# L.sort(key=None, reverse= False)\n",
+    "help(list.sort)\n",
+    "#sort(key=None, reverse=True) , key is the sort function\n",
     "#reverse = False -> sort in ascending order\n",
     "#reverse = True -> sort in descending order\n",
-    "\n"
+    "\n",
+    "planets = [('Mercury',2440,5.43,0.395), # Name, #radius at equador,density in g/cm³, distance from sun\n",
+    "           ('Venus',6052,5.24,0.723),\n",
+    "           ('Earth',6378,5.52,1.000),\n",
+    "           ('Mars',3396,3.93,1.530),\n",
+    "           ('Jupiter',71492,1.33,5.210),\n",
+    "           ('Saturn',60268,0.69,9.551),\n",
+    "           ('Uranus',25559,1.27,19.213),\n",
+    "           ('Neptune',24764,1.64,30.070)]\n",
+    "\n",
+    "size = lambda planet: planet[1]\n",
+    "planets.sort(key=size,reverse= True) # key is the sort function\n",
+    "print(planets)\n",
+    "\n",
+    "density = lambda planet : planet[2]\n",
+    "planets.sort(key = density)\n",
+    "print(planets)\n",
+    "\n",
+    "#list.sort changes the list\n",
+    "\n",
+    "#if we wanna sort a tuple we have to use sorted() function, this function can be used for the lists too\n",
+    "#sorted() method is the iterable data structure, list, string, tuple,sets, dict, frozensets\n",
+    "earth_metals = ['Beryllium','Magnesium','Calcium','Strontium','Barium','Radium']\n",
+    "sorted_earth_metals = sorted(earth_metals)\n",
+    "print(sorted_earth_metals)\n",
+    "\n",
+    "print(earth_metals) # original list is the same, not changed\n",
+    "\n",
+    "#tuple sorting\n",
+    "data = (7,2,5,6,1,3,9,10,4,8)\n",
+    "sorted(data) # output of this method is a list and original tuple unaltered\n",
+    "\n",
+    "\n",
+    "sorted('Alphabetical')"
    ]
   },
   {
@@ -151,12 +212,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "837b454f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same\n",
+      "Not same\n",
+      "Same\n",
+      "Not same\n",
+      "[(1, 1), (2, 1), (3, 3), (4, 7)]\n",
+      "[(1, 1, 'one'), (2, 1, 'two')]\n",
+      "Same\n",
+      "Not same\n",
+      "Same\n",
+      "Not same\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "x = [1,2,3,4]\n",
+    "y = [1,1,3,7,9]\n",
+    "\n",
+    "for i in range(min(len(x),len(y))):\n",
+    "    if x[i] == y [i]:\n",
+    "        print('Same')\n",
+    "    else:\n",
+    "        print('Not same')\n",
+    "\n",
+    "# zip function takes any amount of iterable objects and packs them together into tuples\n",
+    "print(list(zip(x,y))) #  (1, 1), (2, 1), (3, 3), (4, 7)]  9 has been ignored\n",
+    "\n",
+    "z = ['one','two']\n",
+    "print(list(zip(x,y,z))) # [(1, 1, 'one'), (2, 1, 'two')]\n",
+    "\n",
+    "for i,j in zip(x,y):\n",
+    "    if i == j:\n",
+    "        print('Same')\n",
+    "    else:\n",
+    "        print('Not same')"
    ]
   },
   {
@@ -184,18 +282,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "efea8c7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "indexes = []\n",
-    "# START YOUR CODE HERE.\n"
+    "name = input('Enter a file name: ')\n",
+    "if len(name) < 1:\n",
+    "    name = 'data/mbox-short.txt'\n",
+    "\n",
+    "fhand = open(name)\n",
+    "lines = fhand.readlines()\n",
+    "for index,line in enumerate(lines):\n",
+    "    if not line.startswith('From '): continue\n",
+    "    indexes.append(index)\n",
+    "\n",
+    "fhand.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e3deb3e4",
    "metadata": {},
    "outputs": [],
@@ -243,18 +351,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "38da263a",
    "metadata": {},
    "outputs": [],
    "source": [
     "pairs = []\n",
-    "# START YOUR CODE HERE.\n"
+    "name = input('Enter a file name: ')\n",
+    "if len(name) < 1:\n",
+    "    name = 'data/mbox-short.txt'\n",
+    "\n",
+    "with open(name) as f:\n",
+    "    file = f.readlines()\n",
+    "    for index,line in enumerate(file):\n",
+    "        if not line.startswith('From '): continue\n",
+    "        email = line.split()[1]\n",
+    "        pairs.append((index,email))\n",
+    "\n",
+    "pairs.sort(key= lambda x:x[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c4e8fca8",
    "metadata": {},
    "outputs": [],
@@ -290,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
